--- a/index.html
+++ b/index.html
@@ -3,58 +3,51 @@
 	<head>
 		<title>Celluar Automata</title>
 		<script type='text/javascript'>
-			function drawGrid() {
-				var ctx = document.getElementById('canvas');
-				var gridOptions = {
-					minorLines: {
-						separation: 10, 
-						color: '#000000'
-					}, 
-				}; 
 
-				drawGridLines(ctx, gridOptions.minorLines);
+      function drawGrid() {
+        var canvas = document.getElementById('grid');
+        var context = canvas.getContext('2d');
+        renderGrid(canvas, context, 15, 'black');
+        return;
+      }
 
-				return;
-			}
+      function renderGrid(canvas, context, gridPixelSize, color)
+      {
+          context.save();
+          context.lineWidth = 0.5;
+          context.strokeStyle = color;
 
-			function drawGridLines(ctx, lineOptions) {
-				var width  = ctx.width;
-				var height = ctx.height;
-				var ctx = ctx.getContext('2d');
-				ctx.strokeStyle = lineOptions.color;
-				ctx.strokeWidth = 1;
-				ctx.beginPath();
-				var count = null;
-				var i = null;
-				var x = null;
-				var y = null;
+          // horizontal grid lines
+          for(var i = 0; i <= canvas.height; i = i + gridPixelSize)
+          {
+              context.beginPath();
+              context.moveTo(0, i);
+              context.lineTo(canvas.width, i);
+              context.closePath();
+              context.stroke();
+          }
 
-				count = Math.floor(width / lineOptions.separation);
-				
-				for(i = 1; i <= count; i++) {
-					x = (i * lineOptions.separation);
-					ctx.moveTo(x, 0);
-					ctx.lineTo(x, height);
-					ctx.stroke();
-				}
+          // vertical grid lines
+          for(var j = 0; j <= canvas.width; j = j + gridPixelSize)
+          {
+              context.beginPath();
+              context.moveTo(j, 0);
+              context.lineTo(j, canvas.height);
+              context.closePath();
+              context.stroke();
+          }
 
-				count = Math.floor(height / lineOptions.separation);
-
-				for(i = 1; i <= count; i++) {
-					y = (i * lineOptions.separation);
-					ctx.moveTo(0, y);
-					ctx.lineTo(width, y);
-					ctx.stroke();
-				}
-
-				ctx.closePath();
-
-				return;
-			}
+          context.restore();
+      }
+      
 		</script>
 	</head>
 
 	<body onload='drawGrid()'>
-		<canvas id='canvas' width='600', height='600'></canvas>
+		<canvas id='grid' width="600" height="600">
+    <p>Canvas not supported.</p>
+</canvas>
+
+
 	</body>
 </html>
