--- a/index.html
+++ b/index.html
@@ -2,50 +2,11 @@
 <html>
 	<head>
 		<title>Celluar Automata</title>
-		<script type='text/javascript'>
-
-      function drawGrid() {
-        var canvas = document.getElementById('grid');
-        var context = canvas.getContext('2d');
-        renderGrid(canvas, context, 15, 'black');
-        return;
-      }
-
-      function renderGrid(canvas, context, gridPixelSize, color)
-      {
-          context.save();
-          context.lineWidth = 0.5;
-          context.strokeStyle = color;
-
-          // horizontal grid lines
-          for(var i = 0; i <= canvas.height; i = i + gridPixelSize)
-          {
-              context.beginPath();
-              context.moveTo(0, i);
-              context.lineTo(canvas.width, i);
-              context.closePath();
-              context.stroke();
-          }
-
-          // vertical grid lines
-          for(var j = 0; j <= canvas.width; j = j + gridPixelSize)
-          {
-              context.beginPath();
-              context.moveTo(j, 0);
-              context.lineTo(j, canvas.height);
-              context.closePath();
-              context.stroke();
-          }
-
-          context.restore();
-      }
-      
-		</script>
+		<script type='text/javascript' src='js/grid.js'></script>
 	</head>
 
 	<body onload='drawGrid()'>
 		<canvas id='grid' width="600" height="600">
-    <p>Canvas not supported.</p>
 </canvas>
 
 
