--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html>
 	<head>
 		<title>Celluar Automata</title>
-		<script type='text/javascript' src='js/grid.js'></script>
+		
 	</head>
 
-	<body onload='drawGrid()'>
-		<canvas id='grid' width="600" height="600">
-</canvas>
+	<body>
+		<canvas id='grid' width="600" height="600"></canvas>
 
-
+    <script type='text/javascript' src='js/bundle.js'></script>
+    
 	</body>
 </html>
