--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<canvas id='grid' width="600" height="600"></canvas>
 
-    <script src='js/bundle.js'></script>
+    <script src='js/main.js'></script>
     
 	</body>
 </html>
